--- a/lab.html
+++ b/lab.html
@@ -30,6 +30,7 @@
            height: 300px;
            overflow: hidden;
            position: relative;
+           border-radius: 10px; /* 轻微圆角效果 */
        }
        .desc{
            position: absolute;
