--- a/lab.html
+++ b/lab.html
@@ -91,7 +91,7 @@
 
         <div  class="block">
             <div class="desc">
-                <a href="#https://www.baidu.com">STM32简单示例</a>
+                <a href="https://cunko.github.io/docsify/">Docsify使用指南</a>
 
             </div>
             <img class="pic" src="44.jpg"  width="300"/>
