--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       padding: 0;
     }
     .background-image {
-      background-image: url("back.jpg");
+      background-image: url("images/back.jpg");
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
