--- a/lab.html
+++ b/lab.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>1号实验室</title>
    <style>
        body {
       margin: 0;
       padding: 0;
-      background-image: url('8.jpg');
+      background-image: url('back.jpg');
       background-size: cover;
       height: 100vh;
       display: flex;
@@ -77,7 +77,7 @@
                 <a href="#https://www.baidu.com">智能家具系统</a>
 
             </div>
-            <img class="pic" src="22.jpg"  width="300"/>
+            <img class="pic" src="1.jpg"  width="300"/>
 
         </div>
         <div  class="block">
@@ -85,7 +85,7 @@
                 <a href="https://github.com/cunko/cunko.github.io">个人网站搭建</a>
 
             </div>
-            <img class="pic" src="33.jpg"  width="300"/>
+            <img class="pic" src="2.jpg"  width="300"/>
 
         </div>
 
@@ -94,7 +94,7 @@
                 <a href="https://cunko.github.io/docsify/">Docsify使用指南</a>
 
             </div>
-            <img class="pic" src="44.jpg"  width="300"/>
+            <img class="pic" src="3.jpg"  width="300"/>
         </div>
 
 
