--- a/lab.html
+++ b/lab.html
@@ -74,7 +74,7 @@
     <div  class="flex-box">
         <div  class="block">
             <div class="desc">
-                <a href="#https://www.baidu.com">智能家具系统</a>
+                <a href="https://cunko.github.io/Weblinks/">静态响应式网址导航网站</a>
 
             </div>
             <img class="pic" src="1.jpg"  width="300"/>
