--- a/lab.html
+++ b/lab.html
@@ -7,7 +7,7 @@
        body {
       margin: 0;
       padding: 0;
-      background-image: url('images/back.jpg');
+      background-image: url('images/labback.jpg');
       background-size: cover;
       height: 100vh;
       display: flex;
@@ -77,7 +77,7 @@
                 <a href="https://cunko.github.io/Weblinks/">静态响应式网址导航网站</a>
 
             </div>
-            <img class="pic" src="images/1.jpg"  width="300"/>
+            <img class="pic" src="images/6.jpg"  width="300"/>
 
         </div>
         <div  class="block">
@@ -85,7 +85,7 @@
                 <a href="https://github.com/cunko/cunko.github.io">个人网站搭建</a>
 
             </div>
-            <img class="pic" src="images/2.jpg"  width="300"/>
+            <img class="pic" src="images/7.jpg"  width="300"/>
 
         </div>
 
@@ -94,7 +94,7 @@
                 <a href="https://cunko.github.io/docsify/">Docsify使用指南</a>
 
             </div>
-            <img class="pic" src="images/3.jpg"  width="300"/>
+            <img class="pic" src="images/8.jpg"  width="300"/>
         </div>
 
 
