--- a/lab.html
+++ b/lab.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>2号实验室</title>
+    <title>1号实验室</title>
    <style>
        body {
       margin: 0;
       padding: 0;
-      background-image: url('images/lab2back.jpg');
+      background-image: url('images/labback.jpg');
       background-size: cover;
       height: 100vh;
       display: flex;
@@ -74,27 +74,27 @@
     <div  class="flex-box">
         <div  class="block">
             <div class="desc">
-                <a href="#https://cunko.github.io/Weblinks/">STM32项目</a>
+                <a href="https://cunko.github.io/Weblinks/">静态响应式网址导航网站</a>
 
             </div>
-            <img class="pic" src="images/10.jpg"  width="300"/>
+            <img class="pic" src="images/6.jpg"  width="300"/>
 
         </div>
         <div  class="block">
             <div class="desc">
-                <a href="#https://github.com/cunko/cunko.github.io">51单片机项目</a>
+                <a href="https://github.com/cunko/cunko.github.io">个人网站搭建</a>
 
             </div>
-            <img class="pic" src="images/11.jpg"  width="300"/>
+            <img class="pic" src="images/7.jpg"  width="300"/>
 
         </div>
 
         <div  class="block">
             <div class="desc">
-                <a href="https://cunko.github.io/docsify/">群晖Nas项目</a>
+                <a href="https://cunko.github.io/docsify/">Docsify使用指南</a>
 
             </div>
-            <img class="pic" src="images/12.jpg"  width="300"/>
+            <img class="pic" src="images/8.jpg"  width="300"/>
         </div>
 
 
