--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <h1>你好</h1>
     <p>我是 liuliuya，
 是一名电气工程及其自动化专业的学生。
-我会在博客/<a href="https://cunko.github.io/">博客</a>上记录我感兴趣的内容。
-      有时，我会研究一些好玩的项目/<a href="lab.html">1号实验室</a>/<a href="lab2.html">2号实验室</a>。
+我会在博客{<a href="https://cunko.github.io/">博客</a>}上记录我感兴趣的内容。
+      有时，我会研究一些好玩的项目{<a href="lab.html">1号实验室</a>}/{<a href="lab2.html">2号实验室</a>}。
 我喜欢邂逅有趣的灵魂，他们给了我很多新的思考，伴随着我的成长。</p>
     
 
