--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       padding: 0;
     }
     .background-image {
-/*       background-image: url("images/back.jpg"); */
-      background-color: lightpink;
+      background-image: url("images/back.jpg");
+/*       background-color: lightpink; */
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
