--- a/lab2.html
+++ b/lab2.html
@@ -7,7 +7,8 @@
        body {
       margin: 0;
       padding: 0;
-      background-image: url('images/lab2back.jpg');
+/*       background-image: url('images/lab2back.jpg'); */
+      background-color: lightpink;
       background-size: cover;
       height: 100vh;
       display: flex;
