--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Viggo</title>
+    <title>liuliuya</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700,900">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,700">
@@ -42,16 +42,21 @@
     </header>
     <section id="about" class="animated bounce-in about_bg">
         <div class="bg-align">
-            <h1>Designer. Viggo.</h1>
-            <p>My name is Viggo, I’m a Full-time UI designer with an enduring interest in Coding, Taking pictures and Cycling. 
-            I live in China. Want to work together on something? Just follow my <a href="https://twitter.com/decohack" style="border-bottom: 1px solid #CCC;">Twitter</a>. And Make sure you have subscribed to my <a href="https://decohack.zhubai.love/" style="border-bottom: 1px solid #CCC;">Newsletter</a>.
+            <h1>Chinese. Student.</h1>
+            <p>
+                My name is liuliuya, I’m a student, I will record what I am interested in on my <a href="https://cunko.github.io/" style="border-bottom: 1px solid #CCC;">blog</a>, sometimes, 
+                I will research some interesting <a href="lab.html" style="border-bottom: 1px solid #CCC;">projects</a>, I like to meet interesting souls, 
+                they give me a lot of new thoughts, along with my growth.
             </p>
-            <p>我是 Viggo, 我是一个全职产品设计师，最感兴趣的事情是写代码，摄影和骑公路车，可以在我的 <a href="https://twitter.com/decohack" style="border-bottom: 1px solid #CCC;">Twitter</a> 上看到更多关于我的内容。 另外记得订阅我的周刊 <a href="https://decohack.zhubai.love/" style="border-bottom: 1px solid #CCC;">DecoHack</a>。
+            <p>
+                我是 liuliuya, 是一名学生，我会在<a href="https://cunko.github.io/" style="border-bottom: 1px solid #CCC;">博客</a>上记录我感兴趣的内容。
+                有时，我会研究一些好玩的<a href="lab.html" style="border-bottom: 1px solid #CCC;">项目</a>。 
+                我喜欢邂逅有趣的灵魂，他们给了我很多新的思考，伴随着我的成长
             </p>
             </div>
         </div>
         <div class="copyright">
-            <p>©2015–2022 <a href="http://www.viggoz.com">Viggo</a> </p>
+            <p>©2022–2023 <a href="http://www.viggoz.com">liuliuya</a> </p>
         </div>
     </section>
     <section id="profile">
