--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>©2022–2023 <a href="http://www.viggoz.com">liuliuya</a> </p>
+            <p>©2022–2023 <a href="https://88liuliuya.top/">liuliuya</a> </p>
         </div>
     </section>
     <section id="profile">
