--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     </script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-77253689-1"></script>
+
+    <script src="https://kit.fontawesome.com/9059b1b547.js" crossorigin="anonymous"></script>
+    
     <script>
     window.dataLayer = window.dataLayer || [];
 
