--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-77253689-1"></script>
-
+<!-- 图标引入 -->
     <script src="https://kit.fontawesome.com/9059b1b547.js" crossorigin="anonymous"></script>
     
     <script>
@@ -46,7 +46,7 @@
     <section id="about" class="animated bounce-in about_bg">
         <div class="bg-align">
             <h1>Chinese. Student.</h1>
-            <i class="fa-solid fa-wifi"></i>
+           
             <p>
                 My name is liuliuya, I’m a student, I will record what I am interested in on my <a href="https://cunko.github.io/" style="border-bottom: 1px solid #CCC;">blog</a>, sometimes, 
                 I will research some interesting <a href="lab.html" style="border-bottom: 1px solid #CCC;">projects</a>, I like to meet interesting souls, 
@@ -55,12 +55,12 @@
             <p>
                 我是 liuliuya, 是一名学生，我会在<a href="https://cunko.github.io/" style="border-bottom: 1px solid #CCC;">博客</a>上记录我感兴趣的内容。
                 有时，我会研究一些好玩的<a href="lab.html" style="border-bottom: 1px solid #CCC;">项目</a>。 
-                我喜欢邂逅有趣的灵魂，他们给了我很多新的思考，伴随着我的成长。<i class="fa-solid fa-wifi"></i>
+                我喜欢邂逅有趣的灵魂，他们给了我很多新的思考，伴随着我的成长。
             </p>
             </div>
         </div>
         <div class="copyright">
-            <p>©2022–2023 <a href="https://88liuliuya.top/">liuliuya</a> </p>
+            <p>©2022–2023 <a href="https://88liuliuya.top/">liuliuya</a> <i class="fa-thin fa-paper-plane"></i></p>
         </div>
     </section>
     <section id="profile">
