--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>©2022–2023 <a href="https://88liuliuya.top/">liuliuya</a> </p> <i class="fa-thin fa-paper-plane"></i>
+            <p>©2022–2023 <i class="fa-thin fa-paper-plane"></i> <a href="https://88liuliuya.top/">liuliuya</a> </p> 
         </div>
     </section>
     <section id="profile">
