--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
             <p>
                 我是 liuliuya, 是一名学生，我会在<a href="https://cunko.github.io/" style="border-bottom: 1px solid #CCC;">博客</a>上记录我感兴趣的内容。
                 有时，我会研究一些好玩的<a href="lab.html" style="border-bottom: 1px solid #CCC;">项目</a>。 
-                我喜欢邂逅有趣的灵魂，他们给了我很多新的思考，伴随着我的成长。<font-awesome-icon :icon="['fas', 'paper-plane']" />
+                我喜欢邂逅有趣的灵魂，他们给了我很多新的思考，伴随着我的成长。<i class="fa-solid fa-paper-plane"></i>
             </p>
             </div>
         </div>
         <div class="copyright">
-            <p>©2022–2023  <a href="https://88liuliuya.top/">liuliuya</a> </p> 
+            <p>©2022–2023  <i class="fa-solid fa-paper-plane"></i> <a href="https://88liuliuya.top/">liuliuya</a> </p> 
         </div>
     </section>
     <section id="profile">
