--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </header>
     <section id="about" class="animated bounce-in about_bg">
         <div class="bg-align">
-            <h1>Chinese. Student.</h1>
+            <h1><i class="fa-solid fa-paper-plane"></i>Chinese. Student.</h1>
            
             <p>
                 My name is liuliuya, I’m a student, I will record what I am interested in on my <a href="https://cunko.github.io/" style="border-bottom: 1px solid #CCC;">blog</a>, sometimes, 
