--- a/lab.html
+++ b/lab.html
@@ -41,12 +41,14 @@
       border-bottom-style: solid;
     }
   </style>
+  <!-- 图标引入 -->
+    <script src="https://kit.fontawesome.com/9059b1b547.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="content">
     <h1>我的项目</h1>
-    <p><a href="https://github.com/cunko/cunko.github.io">个人网站搭建</a></p>
-    <p><a href="https://cunko.github.io/Guide/#/">我的指南</a></p>
+    <p><a href="https://github.com/cunko/cunko.github.io"><i class="fa-light fa-rocket"></i>个人网站搭建</a></p>
+    <p><a href="https://cunko.github.io/Guide/#/"><i class="fa-thin fa-rocket"></i>我的指南</a></p>
     <p><a href="https://cunko.github.io/docsify/#/">Docsify文档模板</a></p>
     <p><a href="https://cunko.github.io/books/">我的gitbook</a></p>
     <p><a href="https://cunko.github.io/Weblinks/cn/index.html">网址导航网站</a></p>
