--- a/lab.html
+++ b/lab.html
@@ -48,8 +48,8 @@
   <div class="content">
     <h1>我的项目</h1>
     <p><a href="https://github.com/cunko/cunko.github.io"><i class="fa-light fa-rocket"></i>个人网站搭建</a></p>
-    <p><a href="https://cunko.github.io/Guide/#/"><i class="fa-thin fa-rocket"></i>我的指南</a></p>
-    <p><a href="https://cunko.github.io/docsify/#/">Docsify文档模板</a></p>
+    <p><i class="fa-thin fa-rocket"></i> <a href="https://cunko.github.io/Guide/#/">我的指南</a></p>
+    <p><i class="fa-solid fa-paper-plane"></i><a href="https://cunko.github.io/docsify/#/">Docsify文档模板</a></p>
     <p><a href="https://cunko.github.io/books/">我的gitbook</a></p>
     <p><a href="https://cunko.github.io/Weblinks/cn/index.html">网址导航网站</a></p>
     <p><a href="#https://www.baidu.com">智能家具系统</a></p>
