--- a/lab.html
+++ b/lab.html
@@ -90,7 +90,7 @@
     <!-- 黑客 -->
     <div class="desc">
         <h2><i class="fa-solid fa-user-secret"></i>&emsp;</h2>
-        <a href="#https://www.baidu.com">51单片机</a>
+        <a href="lab2.html" style="border-bottom: 1px solid #CCC;">下一页</a>
     </div>
 </div>
 </body>
