--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
            
             <p>
                 My name is liuliuya, I’m a student, I will  record what I am interested in on my <a href="https://cunko.github.io/" style="border-bottom: 1px solid #CCC;">blog</a> and <a href="photo/musings.html" style="border-bottom: 1px solid #CCC;">photo album</a>, sometimes, 
-                I will research some interesting <a href="lab.html" style="border-bottom: 1px solid #CCC;">projects</a>, I like to meet interesting souls, 
+                I will research some interesting <a href="lab.html" style="border-bottom: 1px solid #CCC;">projects</a>,meanwhile, I like to meet interesting souls, 
                 they give me a lot of new thoughts, along with my growth.
             </p>
             <p>
                 我是 liuliuya, 是一名学生，我会在<a href="https://cunko.github.io/" style="border-bottom: 1px solid #CCC;">博客</a>和<a href="photo/musings.html" style="border-bottom: 1px solid #CCC;">相册</a>上记录我感兴趣的内容。
                 有时，我会研究一些好玩的<a href="lab.html" style="border-bottom: 1px solid #CCC;">项目</a>。 
-                我喜欢邂逅有趣的灵魂， 他们给了我很多新的思考，伴随着我的成长。
+                同时，我喜欢邂逅有趣的灵魂，他们给了我很多新的思考，伴随着我的成长。
             </p>
             </div>
         </div>
