--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1>Chinese. Student.</h1>
            
             <p>
-                My name is liuliuya, I’m a  student, I will  record what I am interested in  on my <a href="https://cunko.github.io/" style="border-bottom: 1px solid #CCC;">blog</a> and <a href="photo/musings.html" style="border-bottom: 1px solid #CCC;">photo album</a>, sometimes, 
+                My name is liuliuya, I’m a  student, &emsp;I will  record what I am interested in  on my <a href="https://cunko.github.io/" style="border-bottom: 1px solid #CCC;">blog</a> and <a href="photo/musings.html" style="border-bottom: 1px solid #CCC;">photo album</a>, sometimes, 
                 I  will research some  interesting <a href="lab.html" style="border-bottom: 1px solid #CCC;">projects</a>,meanwhile, I like to meet interesting souls, 
                 they  give me  a lot of new thoughts, along with my growth.
             </p>
