--- a/photo/musings.html
+++ b/photo/musings.html
@@ -77,63 +77,63 @@
                             <div class="gallerylist-wrapper">
                                 <img src="images/1.jpg" alt="Image 1" />
                                 <span>
-                                    <h2>2023 - 2</h2>
-                                    <p>郑州</p>
+                                    <h2>二次元</h2>
+<!--                                     <p>郑州</p> -->
                                     <a class="popup-with-zoom-anim" href="images/1.jpg"><img class="simg" src="images/zoom.png"></a>
                                 </span>
                             </div>
                             <div class="gallerylist-wrapper">
                                 <img src="images/2.jpg" alt="Image 2" />
                                 <span>
-                                    <h2>2020 -10</h2>
-                                    <p>固始</p>
+                                    <h2>一只九龄</h2>
+<!--                                     <p>固始</p> -->
                                     <a class="popup-with-zoom-anim" href="images/2.jpg"><img class="simg" src="images/zoom.png"></a>
                                 </span>
                             </div>
                             <div class="gallerylist-wrapper">
                                 <img src="images/3.jpg" alt="Image 3" />
                                 <span>
-                                    <h2>2023 - 2</h2>
-                                    <p>郑州</p>
+                                    <h2>二次元</h2>
+<!--                                     <p>郑州</p> -->
                                     <a class="popup-with-zoom-anim" href="images/3.jpg"><img class="simg" src="images/zoom.png"></a>
                                 </span>
                             </div>
                             <div class="gallerylist-wrapper">
                                 <img src="images/4.jpg" alt="Image 4" />
                                 <span>
-                                    <h2>2023 - 5</h2>
-                                    <p>洛阳</p>
+                                    <h2>2023 - 2</h2>
+                                    <p>郑州</p>
                                     <a class="popup-with-zoom-anim" href="images/4.jpg"><img class="simg" src="images/zoom.png"></a>
                                 </span>
                             </div>
                             <div class="gallerylist-wrapper">
                                 <img src="images/5.jpg" alt="Image 5" />
                                 <span>
-                                    <h2>二次元</h2>
-<!--                                     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p> -->
+                                    <h2>2020 - 10</h2>
+                                    <p>固始</p>
                                     <a class="popup-with-zoom-anim" href="images/5.jpg"><img class="simg" src="images/zoom.png"></a>
                                 </span>
                             </div>
                             <div class="gallerylist-wrapper">
                                 <img src="images/6.jpg" alt="Image 6" />
                                 <span>
-                                    <h2>2022 - 6</h2>
-                                    <p>电赛证书</p>
+                                    <h2>2023 - 2</h2>
+                                    <p>郑州</p>
                                     <a class="popup-with-zoom-anim" href="images/6.jpg"><img class="simg" src="images/zoom.png"></a>
                                 </span>
                             </div>
                             <div class="gallerylist-wrapper">
                                 <img src="images/7.jpg" alt="Image 7" />
                                 <span>
-                                    <h2>二次元</h2>
-<!--                                     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p> -->
+                                    <h2>2023 - 4</h2>
+                                    <p>洛阳</p>
                                     <a class="popup-with-zoom-anim" href="images/7.jpg"><img class="simg" src="images/zoom.png"></a>
                                 </span>
                             </div>
                             <div class="gallerylist-wrapper">
                                 <img src="images/8.jpg" alt="Image 8" />
                                 <span>
-                                    <h2>一只九龄</h2>
+                                    <h2>电赛证书</h2>
 <!--                                     <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p> -->
                                     <a class="popup-with-zoom-anim" href="images/8.jpg"><img class="simg" src="images/zoom.png"></a>
                                 </span>
