--- a/photo/musings.html
+++ b/photo/musings.html
@@ -74,7 +74,7 @@
 </head>
 <body>
     <div class="button-container">
-        <a href="m.html">
+        <a href="musings.html">
             <button>
                 <span>记忆</span>
             </button>
