--- a/photo/dw.html
+++ b/photo/dw.html
@@ -95,6 +95,11 @@
                 <span>动物</span>
             </button>
         </a>
+        <a href="https://88liuliuya.top/">
+            <button>
+                <span>返回主页</span>
+            </button>
+        </a>
     </div>
 
     <div class="main1">
