--- a/photo/mm.html
+++ b/photo/mm.html
@@ -93,6 +93,11 @@
             <button>
                 <span>动物</span>
             </button>
+         <a href="https://88liuliuya.top/">
+            <button>
+                <span>返回主页</span>
+            </button>
+        </a>
         </a>
     </div>
 
