--- a/lab2.html
+++ b/lab2.html
@@ -21,10 +21,17 @@
             justify-content: center; /* Center the content horizontally */
             align-items: center;
         }
+        .desc {
+        text-align: center; /* 将内容水平居中 */
+    }
+
+        .desc i {
+        font-size: 48px; /* 调整图标大小，根据需要自行调整数值 */
+    }
 
         .background div {
-            width: 250px;
-            height: 250px;
+            width: 20%;
+            height: 300px;
             background-color: #cccccc;
             margin: 40px;
             border-radius: 10px;
@@ -36,10 +43,11 @@
         .desc a {
             text-decoration: none;
             color: #964b00;
-            font-size: 18px;
+
             font-weight: 600;
             text-align: center;
             letter-spacing: 4px;
+            font-size: 24px; /* 调整文字大小，根据需要自行调整数值 */
         }
 
         .desc a:hover {
@@ -87,11 +95,14 @@
         <h2><i class="fa-solid fa-truck"></i>&emsp;</h2>
         <a href="#https://www.baidu.com">智能家具系统</a>
     </div>
+
     <!-- 黑客 -->
     <div class="desc">
         <h2><i class="fa-solid fa-user-secret"></i>&emsp;</h2>
         <a href="#https://www.baidu.com">51单片机</a>
     </div>
+
+
 </div>
 </body>
 </html>
