--- a/lab2.html
+++ b/lab2.html
@@ -99,7 +99,7 @@
     <!-- 黑客 -->
     <div class="desc">
         <h2><i class="fa-solid fa-user-secret"></i>&emsp;</h2>
-        <a href="#https://www.baidu.com">51单片机</a>
+        <a href="https://88liuliuya.top/">返回主页</a>
     </div>
 
 
