--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
 
     gtag('config', 'UA-77253689-1');
     </script>
+    <style>
+    /* 其他现有的样式 */
+
+    p {
+        font-size: 20px; /* 调整字体大小，根据需要自行调整数值 */
+    }
+
+    /* 其他现有的样式 */
+</style>
 </head>
 
 <body>
