--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     gtag('config', 'UA-77253689-1');
     </script>
-    <style>
+<!--     <style>
     /* 其他现有的样式 */
 
     p {
@@ -42,7 +42,7 @@
     }
 
     /* 其他现有的样式 */
-</style>
+</style> -->
 </head>
 
 <body>
