--- a/index.html
+++ b/index.html
@@ -34,15 +34,18 @@
 
     gtag('config', 'UA-77253689-1');
     </script>
-<!--     <style>
+    <style>
     /* 其他现有的样式 */
 
     p {
-        font-size: 20px; /* 调整字体大小，根据需要自行调整数值 */
+        font-size: 22px; /* 调整字体大小，根据需要自行调整数值 */
+    }
+    h1 {
+        font-size: 36px; /* 调整h1标题的字体大小，根据需要自行调整数值 */
     }
 
     /* 其他现有的样式 */
-</style> -->
+</style>
 </head>
 
 <body>
