--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     }
     h1 {
         font-size: 45px; /* 调整h1标题的字体大小，根据需要自行调整数值 */
+        font-weight: bold; /* 设置h1标题为加粗 */
     }
 
     /* 其他现有的样式 */
