--- a/lab2.html
+++ b/lab2.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
+    <style>
+        body {
+            background-color: #f0f0f0;
+            background-repeat: repeat;
+        }
+    </style>
     <style>
         .background {
             background-color: #222222;
