--- a/lab.html
+++ b/lab.html
@@ -83,7 +83,7 @@
     <!-- 板手 -->
     <div class="desc">
         <h2><i class="fa-solid fa-wrench"></i>&emsp;</h2>
-        <a href="#https://www.baidu.com">STM32</a>
+        <a href="https://cunkozuzhi.github.io/begin/#/">快速开始</a>
     </div>
     <!-- 飞机 -->
     <div class="desc">
