--- a/lab.html
+++ b/lab.html
@@ -68,7 +68,7 @@
     <!-- 爱心 -->
     <div class="desc">
         <h2><i class="fa-solid fa-heart"></i>&emsp;</h2>
-        <a href="https://github.com/cunko/cunko.github.io">个人网站搭建</a>
+        <a href="https://github.com/cunko/cunko.github.io">Hexo--个人网站</a>
     </div>
     <!-- 书 -->
     <div class="desc">
@@ -93,7 +93,7 @@
     <!-- 卡车 -->
     <div class="desc">
         <h2><i class="fa-solid fa-truck"></i>&emsp;</h2>
-        <a href="#https://www.baidu.com">智能家具系统</a>
+        <a href="https://cunko.github.io/chirpy-starter/">Jekyll--个人网站</a>
     </div>
 
     <!-- 黑客 -->
