--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <p>
                 我是 liuliuya, 是一名学生，我会在<a href="https://cunko.github.io/" style="border-bottom: 1px solid #CCC;">博客</a>和<a href="photo/musings.html" style="border-bottom: 1px solid #CCC;">相册</a>上记录我感兴趣的内容。
                 有时，我会研究一些好玩的<a href="https://linkspree.io/d/u95evlnq" style="border-bottom: 1px solid #CCC;">项目</a>。 
-                同时，我喜欢邂逅有趣的灵魂，他们给了我很多新的思考，伴随着我的成长。
+                同时，我喜欢邂逅有趣的灵魂，他们给了我很多新的思考，伴随着我的成长<a href="3D照墙/index.html" style="border-bottom: 1px solid #CCC;">相册</a>。
             </p>
             </div>
         </div>
