--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                 有时，我会研究一些好玩的<a href="https://linkspree.io/d/u95evlnq" style="border-bottom: 1px solid #CCC;">项目</a>。 
                 同时，我喜欢邂逅有趣的灵魂，他们给了我很多新的思考，伴随着我的成长<a href="3D照墙/index.html" style="border-bottom: 1px solid #CCC;">相册</a>。
                 <a href="表白自适应源码/表白自适应源码/index.html" style="border-bottom: 1px solid #CCC;">表白墙</a>
+                <a href="puboliu/pbl.html" style="border-bottom: 1px solid #CCC;">瀑布流相册</a>
             </p>
             </div>
         </div>
