--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
            
             <p>
                 My name is liuliuya, I’m a  student, &emsp;I will  record what I am interested in  on my <a href="https://cunko.github.io/" style="border-bottom: 1px solid #CCC;">blog</a> and <a href="projects/xiangce/index.html" style="border-bottom: 1px solid #CCC;">photo album</a>, sometimes, 
-                I  will research some  interesting <a href="https://linkspree.io/d/u95evlnq" style="border-bottom: 1px solid #CCC;">projects</a>,&emsp;meanwhile, I like to meet interesting souls, 
+                I  will research some  interesting <a href="projects/项目展示demo.html" style="border-bottom: 1px solid #CCC;">projects</a>,&emsp;meanwhile, I like to meet interesting souls, 
                 they  give me  a lot of new thoughts, along with my growth.
             </p>
             <p>
