--- a/projects/项目展示demo.html
+++ b/projects/项目展示demo.html
@@ -150,7 +150,7 @@
                   <p><i class="fa-sharp fa-solid fa-image"></i>&emsp;<a href="projects/3D照片墙/index.html">3D照片墙</a></p>
                </div>
 			   			   <div>
-                  <p><i class="fa-solid fa-heart"></i>&emsp;<a href="projects/时间轴/sjz.html">时间轴</a></p>
+                  <p><i class="fa-solid fa-heart"></i>&emsp;<a href="时间轴/sjz.html">时间轴</a></p>
                </div>
 			   			   <div>
                   <p><i class="fa-solid fa-house"></i>&emsp;<a href="projects/house/2-2 个人主页.html">我的小屋</a></p>
