--- a/projects/3D照片墙/index.html
+++ b/projects/3D照片墙/index.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8">
       <meta name="Keywords" content="">
       <meta name="Description" content="">
-      <title>A姐分享:www.ahhhhfs.com</title>
+      <title>3D照片墙</title>
 
       <style type="text/css">
             /* 去掉默认效果 */
