--- a/projects/时间轴/sjz.html
+++ b/projects/时间轴/sjz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>我的人生</title>
     <style>
         *{
             margin: 0;
@@ -20,16 +20,17 @@
             position: relative;
             top: 100px;
         }
-        .wrap::after{
-            content: '';
-            position: absolute;
-            top: -100px;
-            left: 50%;
-            width: 5px;
-            z-index: -999;
-            height: 1000px;
-            background-color: rgba(255,255,255,.5);
-        }
+.box + .box::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 5px;
+    height: calc(100% + 50px); /* 调整线的长度 */
+    background-color: rgba(255, 255, 255, 0.5);
+    z-index: -1;
+}
         .box{
             position: relative;
             width: 100%;
@@ -38,15 +39,19 @@
             display: flex;
             justify-content: space-between;
         }
-        .left,.right{
-            position: relative;
-            width: 40%;
-            height: 120px;
-            border-radius: 15px;
-            text-align: center;
-            color: rgb(90, 90, 90);
-            /* background-color: rgba(255,255,255,.5); */
-        }
+        .left,
+        .right {
+			position: relative;
+			width: 45%; /* 根据需要调整宽度 */
+			height: auto; /* 根据内容调整高度 */
+			border-radius: 15px;
+			text-align: center;
+			color: rgb(90, 90, 90);
+			word-wrap: break-word; /* 允许长文本在方框内换行 */
+			overflow-wrap: break-word; /* 另一个有利于文本换行的属性 */
+			padding: 10px; /* 添加边距，让文本与方框边缘有间隔 */
+         }
+
         .box:nth-child(even) .left{
             background-color: rgba(255,255,255,.4);
             box-shadow: 0 0 10px rgba(0,0,0,.3);
@@ -76,17 +81,17 @@
         <div class="box">
             <div class="left"></div>
             <div class="center"><span>
-                2017
+                2000.11
             </span></div>
-            <div class="right">Hazy I do not know what to do, day and night miss the people I like, confusion has become my biggest enemy, let me continue to degenerate
+            <div class="right">我在河南一个村子出生了╰(*°▽°*)╯
             </div>
         </div>
 
         <div class="box">
-            <div class="left">I gradually became addicted to the game world, trying to come true, but the pressure of learning and social society pulled me back again, tormenting me constantly
+            <div class="left">在村子的世界里适应和成长，(❁´◡`❁)
             </div>
             <div class="center"><span>
-                2018
+                2000.11-2004.09
             </span></div>
             <div class="right"></div>
         </div>
@@ -94,28 +99,77 @@
         <div class="box">
             <div class="left"></div>
             <div class="center"><span>
-                2019
+                2004.09-2006.06
             </span></div>
-            <div class="right">Depression and loneliness occupied me, in a casual attempt to fitness can release introverted depression, so I fell in love with fitness, determined to go on
+            <div class="right">赵营幼儿园，4~6
             </div>
         </div>
 
         <div class="box">
-            <div class="left">Fitness let me out of depression, tearing pain can let me feel I'm still alive, make me stand up in the swamp, I began a self-discipline life
-            </div>
+            <div class="left">赵营小学，6~10</div>
             <div class="center"><span>
-                2020
+                2006.09-2010.06
             </span></div>
             <div class="right"></div>
         </div>
+		
+		
+		<div class="box">
+            <div class="left">
+            </div>
+            <div class="center"><span>
+                2010.09-2013.06
+            </span></div>
+            <div class="right">赵岗小学，10~13</div>
+        </div>
+		
 
         <div class="box">
+            <div class="left">段集初中，13~16</div>
+            <div class="center"><span>
+                2013.09-2016.06
+            </span></div>
+            <div class="right">
+			</div>
+        </div>
+		
+		<div class="box">
             <div class="left"></div>
             <div class="center"><span>
-                2021
+                2016.09-2019.06
             </span></div>
-            <div class="right">Self discipline fascinates me with learning. I need to be strong, I need to be respected by others, and I need money</div>
+            <div class="right">永和高中，16~19
+			</div>
         </div>
+
+        <div class="box">
+            <div class="left">固始一中，19~20</div>
+            <div class="center"><span>
+                2019.09-2020.06
+            </span></div>
+            <div class="right"></div>
+        </div>
+		
+		
+		<div class="box">
+            <div class="left">
+            </div>
+            <div class="center"><span>
+                2020.09-2023.06
+            </span></div>
+            <div class="right">郑州职业技术学院，20~23</div>
+        </div>
+
+        <div class="box">
+            <div class="left">郑州经贸学院，23~25</div>
+            <div class="center"><span>
+                2023.09-2025.06
+            </span></div>
+            <div class="right"></div>
+        </div>
+		
+
+		
     </div>
 </body>
 </html>
